# AVOW

./: .editorconfig  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.md  README.md  TODO.md
src/: VERSION.h  main.cpp
src/algorithm/: Algorithm.hpp  algorithms.hpp
src/algorithm/algos/: Blank.hpp  Color.hpp  Noise.hpp  Random.hpp
src/algorithm/algos/Noise/: Perlin.hpp
src/algorithms/: Algorithm.hpp  algorithms.hpp
src/algorithms/blank/: Blank.hpp
src/algorithms/simple/: Random.hpp  White.hpp
src/utils/: Image.hpp  data.hpp  tools.hpp
